@@ -1,12 +1,12 @@
 Set::Infinite TODO 
 
-- New method: clone
-
 - Deprecate min_a()
   min() should check "wantarray", instead.
 
 - New methods: map / grep
   From a discussion with Andrew Pimlott and Dave Rolsky
+
+- Redo POD
 
 Old TODO:
 
@@ -33,6 +33,7 @@ Old TODO:
     - a set with first == inf or last = -inf is an error!
 
     - tests for "iterate" min/max/first/last
+      These may fail if "iterate" returns >= 2 elements
     - more tests for min/max/span/size on too_complex sets
 
     - find out how to compare "<=>" unbounded sets
